# gemma-refusal-circuit

./: README.md  pyproject.toml
gemma_refusal_circuit/: ablation_df.csv  demo.ipynb  demo_2.ipynb  refusal_dataset.ipynb
